# moemail2

./: .cursorrules  .env.example  .env.local  .gitignore  CHANGELOG.md  CLAUDE.md  README.en.md  README.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts  wrangler.antigravity.json  wrangler.example.json  wrangler.tinypng.example.json  wrangler.tinypng.json  wrangler.tinypng.registrar-americas.example.json  wrangler.tinypng.registrar-apac.example.json  wrangler.tinypng.registrar-europe.example.json
antigravity/: README.md
app/: robots.ts  sitemap.ts
desktop/smart-image-compressor/src-tauri/: Cargo.toml  tauri.conf.json
desktop/smart-image-compressor/src-tauri/capabilities/: default.json
desktop/smart-image-compressor/src-tauri/icons/: icon.icns
desktop/smart-image-compressor/src-tauri/src/: commands.rs  compression.rs  lib.rs  license_api.rs  main.rs  models.rs  overwrite_manifest.rs  scanner.rs  tinify.rs  vault.rs
drizzle/: 0019_quiet_pet_avengers.sql  0020_graceful_molecule_man.sql  0021_clear_mindworm.sql  0022_stormy_mac_gargan.sql  0023_eager_living_lightning.sql  0024_tinypng-task-runs.sql  0025_tinypng-task-run-success-count.sql  0026_desktop-licenses.sql  0027_dynamic-desktop-grants.sql  0027_numerous_thing.sql  0028_brainy_callisto.sql  0029_tinypng-worker-cluster.sql  0030_tinypng-worker-email-domains.sql  0031_tinypng-worker-registration-mode.sql
edgeone-auth-proxy/: README.md  index.html  package.json
public/: manifest.json
scripts/: generate-test-data.ts  release.ts  tinypng-api-key-generator.ts
(+234 files in other folders)
