[package]
name = "smart-image-compressor"
version = "0.1.1"
description = "智能压缩工具"
authors = ["moemail"]
edition = "2021"

[lib]
name = "smart_image_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
keyring = "4.1.4"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-stronghold = "2.3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "sync", "time"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3.23.0"
